--- a/index.html
+++ b/index.html
@@ -1,128 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="./photos/logo.png" alt="Logo">
-        <ul>
-            <li><a href="">Каталог</a></li>
-            <li><a href="">Про мене</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакти</a></li>
-        </ul>
-        <img src="./photos/shoppingcart.png" alt="cart">
+      <img src="./photos/logo.png" alt="Logo" />
+      <ul>
+        <li><a href="">Каталог</a></li>
+        <li><a href="">Про мене</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакти</a></li>
+      </ul>
+      <img src="./photos/shoppingcart.png" alt="cart" />
     </header>
     <main>
+      <section>
+        <h1>Авторські десерти</h1>
+        <ul>
+          <li>
+            <img src="./photos/shy.png" alt="shu" />
+            <p>заварні шу</p>
+          </li>
+          <li>
+            <img src="./photos/tart.png" alt="tart" />
+            <p>апетитні тарти</p>
+          </li>
+          <li>
+            <img src="./photos/cake1.png" alt="cake" />
+            <p>мусові торти</p>
+          </li>
+        </ul>
+        <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
+        <ul>
+          <li><img src="./photos/twitter.png" alt="Twitter" /></li>
+          <li><img src="./photos/facebook.png" alt="Facebook" /></li>
+          <li><img src="./photos/instagram.png" alt="Instagram" /></li>
+        </ul>
+      </section>
 
-        <section>
-            <h1>Авторські десерти </h1>
-            <ul>
-                <li>
-                    <img src="./photos/shy.png" alt="shu">
-                    <p>заварні шу</p>
-                </li>
-                <li>
-                    <img src="./photos/tart.png" alt="tart">
-                    <p>апетитні тарти</p>
-                </li>
-                <li>
-                    <img src="./photos/cake1.png" alt="cake">
-                    <p>мусові торти</p>
-                </li>
-            </ul>
-            <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
-            <ul>
-                <li><img src="./photos/twitter.png" alt="Twitter"></li>
-                <li><img src="./photos/facebook.png" alt="Facebook"></li>
-                <li><img src="./photos/instagram.png" alt="Instagram"></li>
-            </ul>
-        </section>
-
-        <section>
-            <ul>
-                <li>
-                    <img src="./photos/cake2.png" alt="cakes">
-                    <h2>Торти</h2>
-                </li>
-                <li>
-                    <img src="./photos/shu2.png" alt="shu">
-                    <h2>Шу</h2>
-                </li>
-                <li>
-                    <img src="./photos/tistechka.png" alt="tistechka">
-                    <h2>Тістечка</h2>
-                </li>
-                <li>
-                    <img src="/photos/pizza.png" alt="pizza">
-                    <h2>Піца</h2>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Бестселлери</h2>
-            <ul>
-                <li>
-                    <img src="./photos/cake3.png" alt="cake">
-                    <h3>Мусовий торт “Манго-маракуйя”</h3>
-                    <p>1200 грн/ 3 кг</p>
-                </li>
-                <li>
-                    <img src="./photos/brouny1.png" alt="cake">
-                    <h3>Шоколадне тістечко брауні</h3>
-                    <p>300 грн/ 3шт</p>
-                </li>
-                <li>
-                    <img src="./photos/shu3.png" alt="shu">
-                    <h3>Тістечка Шу</h3>
-                    <p>400 грн/ 6 шт</p>
-                </li>
-            </ul>
-            <button type="button">Переглянути весь асортимент</button>
-        </section>
-        <section>
-            <h2>Чому саме Grann?</h2>
-            <img src="./photos/browne2.png" alt="cake">
-            <ul>
-                <li>
-                    <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
-                    <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
-                </li>
-                <li>
-                    <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
-                    <p>Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити замовлення згідно ваших побажаннь.</p>
-                </li>
-                <li>
-                    <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
-                    <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і десерти.
-
-                        Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Доставка і оплата</h2>
-            <ul>
-                <li>
-                    <img src="./photos/box.png" alt="box">
-                    <h3>Самовивіз</h3>
-                    <p>Самовивіз з Печерського р-ну, м. Київ</p>
-                </li>
-                <li>
-                    <img src="./photos/" alt="scooter">
-                    <h3>Доставка</h3>
-                    <p>Доставка на таксі (за тарифами служби таксі)</p>
-                </li>
-                <li>
-                    <img src="./photos/" alt="cash">
-                    <h3>Передплата</h3>
-                    <p>Передплата на картку в розмірі 50% від суми замовлення</p>
-                </li>
-            </ul>
-        </section>
+      <section>
+        <ul>
+          <li>
+            <img src="./photos/cake2.png" alt="cakes" />
+            <h2>Торти</h2>
+          </li>
+          <li>
+            <img src="./photos/shu2.png" alt="shu" />
+            <h2>Шу</h2>
+          </li>
+          <li>
+            <img src="./photos/tistechka.png" alt="tistechka" />
+            <h2>Тістечка</h2>
+          </li>
+          <li>
+            <img src="/photos/pizza.png" alt="pizza" />
+            <h2>Піца</h2>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Бестселлери</h2>
+        <ul>
+          <li>
+            <img src="./photos/cake3.png" alt="cake" />
+            <h3>Мусовий торт “Манго-маракуйя”</h3>
+            <p>1200 грн/ 3 кг</p>
+          </li>
+          <li>
+            <img src="./photos/brouny1.png" alt="cake" />
+            <h3>Шоколадне тістечко брауні</h3>
+            <p>300 грн/ 3шт</p>
+          </li>
+          <li>
+            <img src="./photos/shu3.png" alt="shu" />
+            <h3>Тістечка Шу</h3>
+            <p>400 грн/ 6 шт</p>
+          </li>
+        </ul>
+        <button type="button">Переглянути весь асортимент</button>
+      </section>
+      <section>
+        <h2>Чому саме Grann?</h2>
+        <img src="./photos/browne2.png" alt="cake" />
+        <ul>
+          <li>
+            <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+            <p>
+              Я замовляю продукти тільки у тих постачальників, які мають
+              сертифікати якості.
+            </p>
+          </li>
+          <li>
+            <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
+            <p>
+              Якщо з якихось причин ви не вживаєте окремі продукти десерту, є
+              можливість зробити замовлення згідно ваших побажаннь.
+            </p>
+          </li>
+          <li>
+            <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
+            <p>
+              Не обов'язково чекати на свято, щоб замовити смачненьке. Наша
+              кондитерська робить мініторти і десерти. Мінімальна вага
+              замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8
+              кг.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Доставка і оплата</h2>
+        <ul>
+          <li>
+            <img src="./photos/box.png" alt="box" />
+            <h3>Самовивіз</h3>
+            <p>Самовивіз з Печерського р-ну, м. Київ</p>
+          </li>
+          <li>
+            <img src="./photos/bike.png" alt="scooter" />
+            <h3>Доставка</h3>
+            <p>Доставка на таксі (за тарифами служби таксі)</p>
+          </li>
+          <li>
+            <img src="./photos/cash.png" alt="cash" />
+            <h3>Передплата</h3>
+            <p>Передплата на картку в розмірі 50% від суми замовлення</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="./photos/pict1.png" alt="Photo" />
+          </li>
+          <li>
+            <img src="./photos/name.png" alt="sing" />
+          </li>
+          <li>
+            <h3>Анна Кострома</h3>
+          </li>
+          <li>
+            <p>Засновниця кондитерської Grann Pastry</p>
+          </li>
+          <li>
+            <p>
+              Від хобі до власної справи. Я закінчила DGF International Culinary
+              School в Києві, а згодом навчалася в одній з найвідоміших шкіл
+              готельного сервісу і кулінарії в світі «Le Cordon Bleu»
+              (Франція).Свою справу почала після того, як здобула досвід і
+              працювала в одному з найбільших кондитерських цехів Грузії (1500
+              кв.м.). Наразі започаткувала особистий бренд і будую власний
+              кондитерський цех.Моя робота мене надихає. Завдяки моїм солодощам,
+              я можу дарувати щасливі моменти для вас!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><p>Давайте зробимо щось унікальне разом!</p></li>
+          <li>
+            <p>
+              Ви можете замовити свій власний рецепт десерту, який вам буде до
+              вподоби. Заповніть заявку та я зв’яжусь з вами, аби обговорити
+              деталі замовлення.
+            </p>
+          </li>
+        </ul>
+        <div>
+          <label for="lastname"></label>
+          <input type="text" name="" id="lastname" placeholder="Ім’я" />
+        </div>
+        <div>
+          <span>
+            <label for="phone"></label>
+            <input type="tel" name="" id="phone" placeholder="Номер телефону" />
+          </span>
+        </div>
+        <div>
+          <label for="comment"></label>
+          <textarea
+            name=""
+            id="comment"
+            cols="50"
+            rows="5"
+            placeholder="Опишіть ваші побажання:"
+          ></textarea>
+        </div>
+      </section>
+      <section>
+        <h4>Популярні запитання</h4>
+        <ul>
+            <li>
+                <p>СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</p>
+                <p>Замовлення необхідно зробити як мінімум за 3-4 дні до вашого свята.</p>
+            </li>
+            <li>
+                <p>ЧИ Є У ВАС ДОСТАВКА?</p>
+            </li>
+            <li>
+                <p>ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</p>
+            </li>
+            <li>
+                <p>ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</p>
+            </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Instagram</h3>
+        <ul>
+            <li><img src="./photos/cake4.png" alt="cake"></li>
+            <li><img src="./photos/cake5.png" alt="cake"></li>
+            <li><img src="./photos/Breackfast.png" alt="Breakfast"></li>
+            <li><img src="./photos/cake6.png" alt="cake"></li>
+            <li><img src="./photos/cake7.png" alt="cake"></li>
+            <li><img src="./photos/pict2.png" alt="author"></li>
+        </ul>
+        <button type="button">Завітати на сторінку</button>
+      </section>
     </main>
-</body>
+    <footer>
+        <ul>
+            <li><address>с. Хотів, вул. Партизанська 1А</address></li>
+            <li><a href="+38999876240">Tel: +38(099) 987 62 40</a></li>
+            <li><a href="kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a></li>
+        </ul>
+    </footer>
+  </body>
 </html>
