--- a/katalog.html
+++ b/katalog.html
@@ -9,7 +9,7 @@
     <header>
       <img src="./photos/logo.png" alt="Logo" />
       <ul>
-        <li><a href="">Каталог</a></li>
+        <li><a href="./katalog.htm">Каталог</a></li>
         <li><a href="">Про мене</a></li>
         <li><a href="">Доставка</a></li>
         <li><a href="">Контакти</a></li>
@@ -18,27 +18,10 @@
     </header>
     <main>
       <section>
-        <h1>Авторські десерти</h1>
-        <ul>
-          <li>
-            <img src="./photos/shy.png" alt="shu" />
-            <p>заварні шу</p>
-          </li>
-          <li>
-            <img src="./photos/tart.png" alt="tart" />
-            <p>апетитні тарти</p>
-          </li>
-          <li>
-            <img src="./photos/cake1.png" alt="cake" />
-            <p>мусові торти</p>
-          </li>
-        </ul>
-        <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
-        <ul>
-          <li><img src="./photos/twitter.png" alt="Twitter" /></li>
-          <li><img src="./photos/facebook.png" alt="Facebook" /></li>
-          <li><img src="./photos/instagram.png" alt="Instagram" /></li>
-        </ul>
+        <img src="./photos/cake2.png" alt="cake" />
+        <h1>GRANN</h1>
+        <h2>авторські десерти</h2>
+        <button type="button">До каталогу</button>
       </section>
       <section>
         <ul>
@@ -82,31 +65,42 @@
         <button type="button">Переглянути весь асортимент</button>
       </section>
       <section>
-        <h2>Чому саме Grann?</h2>
-        <img src="./photos/browne2.png" alt="cake" />
         <ul>
           <li>
-            <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+            <h2>Чому саме Grann?</h2>
+            <p>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</p>
+          </li>
+          <li>
             <p>
               Я замовляю продукти тільки у тих постачальників, які мають
               сертифікати якості.
             </p>
           </li>
           <li>
-            <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
+            <p>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</p>
+          </li>
+          <li>
             <p>
               Якщо з якихось причин ви не вживаєте окремі продукти десерту, є
               можливість зробити замовлення згідно ваших побажаннь.
             </p>
           </li>
           <li>
-            <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
+            <p>ЗРУЧНА ВАГА ТОРТУ</p>
+          </li>
+          <li>
             <p>
               Не обов'язково чекати на свято, щоб замовити смачненьке. Наша
               кондитерська робить мініторти і десерти. Мінімальна вага
               замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8
               кг.
             </p>
+          </li>
+          <li>
+            <img src="./photos/cake8.png" alt="cake" />
+          </li>
+          <li>
+            <img src="./photos/lovewithgrann.png" alt="love with" />
           </li>
         </ul>
       </section>
@@ -193,48 +187,53 @@
       <section>
         <h4>Популярні запитання</h4>
         <ul>
-            <li>
-                <p>СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</p>
-                <p>Замовлення необхідно зробити як мінімум за 3-4 дні до вашого свята.</p>
-            </li>
-            <li>
-                <p>ЧИ Є У ВАС ДОСТАВКА?</p>
-            </li>
-            <li>
-                <p>ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</p>
-            </li>
-            <li>
-                <p>ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</p>
-            </li>
+          <li>
+            <p>СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?</p>
+            <p>
+              Замовлення необхідно зробити як мінімум за 3-4 дні до вашого
+              свята.
+            </p>
+          </li>
+          <li>
+            <p>ЧИ Є У ВАС ДОСТАВКА?</p>
+          </li>
+          <li>
+            <p>ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?</p>
+          </li>
+          <li>
+            <p>ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?</p>
+          </li>
         </ul>
       </section>
       <section>
         <h3>Instagram</h3>
         <ul>
-            <li><img src="./photos/cake4.png" alt="cake"></li>
-            <li><img src="./photos/cake5.png" alt="cake"></li>
-            <li><img src="./photos/Breackfast.png" alt="Breakfast"></li>
-            <li><img src="./photos/cake6.png" alt="cake"></li>
-            <li><img src="./photos/cake7.png" alt="cake"></li>
-            <li><img src="./photos/pict2.png" alt="author"></li>
+          <li><img src="./photos/cake4.png" alt="cake" /></li>
+          <li><img src="./photos/cake5.png" alt="cake" /></li>
+          <li><img src="./photos/Breackfast.png" alt="Breakfast" /></li>
+          <li><img src="./photos/cake6.png" alt="cake" /></li>
+          <li><img src="./photos/cake7.png" alt="cake" /></li>
+          <li><img src="./photos/pict2.png" alt="author" /></li>
         </ul>
         <button type="button">Завітати на сторінку</button>
       </section>
     </main>
     <footer>
-        <ul>
-            <li><address>с. Хотів, вул. Партизанська 1А</address></li>
-            <li><a href="+38999876240">Tel: +38(099) 987 62 40</a></li>
-            <li><a href="kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a></li>
-        </ul>
-        <img src="./photos/logo2.png" alt="Logo">
-        <ul>
-          <li><img src="./photos/_Instagram (1).png" alt="instagram"></li>
-          <li><img src="./photos/Vector (1).png" alt="Twitter"></li>
-          <li><img src="./photos/_Path_.png" alt=""></li>
-          <li><p>Політика конфіденційності</p></li>
-          <li><p>Договір оферти</p></li>
-        </ul>
+      <ul>
+        <li><address>с. Хотів, вул. Партизанська 1А</address></li>
+        <li><a href="+38999876240">Tel: +38(099) 987 62 40</a></li>
+        <li>
+          <a href="kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a>
+        </li>
+      </ul>
+      <img src="./photos/logo2.png" alt="Logo" />
+      <ul>
+        <li><img src="./photos/_Instagram (1).png" alt="instagram" /></li>
+        <li><img src="./photos/Vector (1).png" alt="Twitter" /></li>
+        <li><img src="./photos/_Path_.png" alt="" /></li>
+        <li><p>Політика конфіденційності</p></li>
+        <li><p>Договір оферти</p></li>
+      </ul>
     </footer>
   </body>
 </html>
