--- a/katalog.html
+++ b/katalog.html
@@ -228,9 +228,9 @@
       </ul>
       <img src="./photos/logo2.png" alt="Logo" />
       <ul>
-        <li><img src="./photos/_Instagram (1).png" alt="instagram" /></li>
-        <li><img src="./photos/Vector (1).png" alt="Twitter" /></li>
-        <li><img src="./photos/_Path_.png" alt="" /></li>
+        <li><img src="./photos/instagram.png" alt="instagram" /></li>
+        <li><img src="./photos/twitter2.png"  alt="Twitter" /></li>
+        <li><img src="./photos/watshapp.png" alt="watshapp" /></li>
         <li><p>Політика конфіденційності</p></li>
         <li><p>Договір оферти</p></li>
       </ul>
