--- a/aboutme.html
+++ b/aboutme.html
@@ -29,79 +29,79 @@
         <section>
             <ul>
                 <li>
-                    <img src="" alt="">
+                    <img src="./photos/cake3.png" alt="cake">
                     <h2>Мусовий торт “Манго-маракуйя”</h2>
-                    <p></p>
+                    <p>1200 грн/ 3 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake9.png" alt="cake">
+                    <h2>Шоколадний торт з малиною</h2>
+                    <p>1000 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake10.png" alt="cake">
+                    <h2>Торт “Ківі-маракуйя”</h2>
+                    <p>1100 грн/ 1.5 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake11.png" alt="cake">
+                    <h2>Торт “Снікерс”</h2>
+                    <p>1400 грн/ 3 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/cake7.png" alt="cake">
+                    <h2>Торт “Наполеон”</h2>
+                    <p>1000 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake13.png" alt="cake">
+                    <h2>Торт “Тіраміссу”</h2>
+                    <p>1350 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pict14.png" alt="cake">
+                    <h2>Торт “Медовик”</h2>
+                    <p>800 грн/ 1,5 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake15.png" alt="cake">
+                    <h2>Торт “Вафельно-горіховий”</h2>
+                    <p>800 грн/ 1,5 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake16.png" alt="cake">
+                    <h2>Торт “Фісташка-малина”</h2>
+                    <p>1350 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="./photos/cake3.png" alt="cake">
                     <h2>Мусовий торт “Манго-маракуйя”</h2>
-                    <p></p>
+                    <p>1200 грн/ 3 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake9.png" alt="cake">
+                    <h2>Шоколадний торт з малиною</h2>
+                    <p>1000 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake10.png" alt="cake">
+                    <h2>Торт “Ківі-маракуйя”</h2>
+                    <p>1100 грн/ 1.5 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake11.png" alt="cake">
+                    <h2>Торт “Снікерс”</h2>
+                    <p>1400 грн/ 3 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/cake7.png" alt="cake">
+                    <h2>Торт “Наполеон”</h2>
+                    <p>1000 грн/ 2 кг</p>
                 </li>
                 <li>
-                    <img src="" alt="">
-                    <h2></h2>
-                    <p></p>
+                    <img src="./photos/pictcake13.png" alt="cake">
+                    <h2>Торт “Тіраміссу”</h2>
+                    <p>1350 грн/ 2 кг</p>
                 </li>
             </ul>
         </section>
